CREATE SCHEMA IF NOT EXISTS POINT;

-- 포인트 거래번호 sequence(cycle)
CREATE SEQUENCE IF NOT EXISTS POINT.SEQ_PTXNO
    START WITH 1
    INCREMENT BY 1
    MINVALUE 0
    MAXVALUE 999999999
    CYCLE;

-- 내부 상세 ID sequence(cycle)
CREATE SEQUENCE IF NOT EXISTS POINT.SEQ_DETAIL_ID
    START WITH 1
    INCREMENT BY 1
    MINVALUE 0
    MAXVALUE 999999999
    CYCLE;

-- 회원별 현재 사용 가능 포인트 잔액
CREATE TABLE IF NOT EXISTS POINT.PNT_MEMBER_BAL (
    MEMBER_ID VARCHAR(32) NOT NULL,
    NORMAL_AMT BIGINT NOT NULL,
    MANUAL_AMT BIGINT NOT NULL,
    EXPIRED_AMT BIGINT NOT NULL,
    NEXT_EXP_DT DATE,
    VERSION BIGINT NOT NULL,
    CREATED_AT TIMESTAMP NOT NULL,
    UPDATED_AT TIMESTAMP NOT NULL,
    CONSTRAINT PK_PNT_MEMBER_BAL PRIMARY KEY (MEMBER_ID)
);

COMMENT ON TABLE POINT.PNT_MEMBER_BAL IS '회원별 포인트 잔액';
COMMENT ON COLUMN POINT.PNT_MEMBER_BAL.MEMBER_ID IS '회원아이디 (공백 문자를 포함하지 않는 최대 32자리 문자열)';
COMMENT ON COLUMN POINT.PNT_MEMBER_BAL.NORMAL_AMT IS '일반 적립 포인트 잔액';
COMMENT ON COLUMN POINT.PNT_MEMBER_BAL.MANUAL_AMT IS '관리자 수기 지급 포인트 잔액';
COMMENT ON COLUMN POINT.PNT_MEMBER_BAL.EXPIRED_AMT IS '누적 만료 포인트 금액';
COMMENT ON COLUMN POINT.PNT_MEMBER_BAL.NEXT_EXP_DT IS '다음 만료 예정일';
COMMENT ON COLUMN POINT.PNT_MEMBER_BAL.VERSION IS '낙관적 락 버전';
COMMENT ON COLUMN POINT.PNT_MEMBER_BAL.CREATED_AT IS '생성일시';
COMMENT ON COLUMN POINT.PNT_MEMBER_BAL.UPDATED_AT IS '수정일시';

CREATE INDEX IF NOT EXISTS POINT.IDX_PNT_MEMBER_BAL_01 ON POINT.PNT_MEMBER_BAL (NEXT_EXP_DT);

/** 포인트 거래 이력을 관리하는 테이블(INSERT ONLY) */
CREATE TABLE IF NOT EXISTS POINT.PNT_TR_HIST (
    PTXNO VARCHAR(26) NOT NULL,
    OPTXNO VARCHAR(26) NOT NULL,
    MEMBER_ID VARCHAR(32) NOT NULL,
    ORDER_NO VARCHAR(100),
    ORDER_DTM TIMESTAMP,
    TX_TYPE VARCHAR(20) NOT NULL,
    TX_AMT BIGINT NOT NULL,
    RMN_AMT BIGINT NOT NULL,
    EXP_DT DATE,
    CREATED_AT TIMESTAMP NOT NULL,
    CONSTRAINT PK_PNT_TR_HIST PRIMARY KEY (PTXNO)
);

COMMENT ON TABLE POINT.PNT_TR_HIST IS '포인트 거래 이력';
COMMENT ON COLUMN POINT.PNT_TR_HIST.PTXNO IS '거래번호';
COMMENT ON COLUMN POINT.PNT_TR_HIST.OPTXNO IS '원 거래번호';
COMMENT ON COLUMN POINT.PNT_TR_HIST.MEMBER_ID IS '회원아이디';
COMMENT ON COLUMN POINT.PNT_TR_HIST.ORDER_NO IS '클라이언트 주문번호';
COMMENT ON COLUMN POINT.PNT_TR_HIST.ORDER_DTM IS '클라이언트 주문/요청 시각';
COMMENT ON COLUMN POINT.PNT_TR_HIST.TX_TYPE IS '거래 유형';
COMMENT ON COLUMN POINT.PNT_TR_HIST.TX_AMT IS '거래 금액';
COMMENT ON COLUMN POINT.PNT_TR_HIST.RMN_AMT IS '거래 후 총 잔액';
COMMENT ON COLUMN POINT.PNT_TR_HIST.EXP_DT IS '거래 당시 만료일 스냅샷';
COMMENT ON COLUMN POINT.PNT_TR_HIST.CREATED_AT IS '서버 생성 시각';

CREATE UNIQUE INDEX IF NOT EXISTS POINT.UK_PNT_TR_HIST_01 ON POINT.PNT_TR_HIST (MEMBER_ID, ORDER_NO, TX_TYPE);
CREATE INDEX IF NOT EXISTS POINT.IDX_PNT_TR_HIST_02 ON POINT.PNT_TR_HIST (MEMBER_ID, OPTXNO);
CREATE INDEX IF NOT EXISTS POINT.IDX_PNT_TR_HIST_03 ON POINT.PNT_TR_HIST (MEMBER_ID, CREATED_AT);

-- 포인트 적립 원장 테이블
CREATE TABLE IF NOT EXISTS POINT.PNT_EARN_MST (
    PTXNO VARCHAR(26) NOT NULL,
    MEMBER_ID VARCHAR(32) NOT NULL,
    EARN_TYPE VARCHAR(20) NOT NULL,
    EARN_AMT BIGINT NOT NULL,
    RMN_AMT BIGINT NOT NULL,
    USE_AMT BIGINT NOT NULL,
    EARN_CNCL_AMT BIGINT NOT NULL,
    EXPIRED_AMT BIGINT NOT NULL,
    FIRST_EXP_DT DATE NOT NULL,
    EXP_DT DATE NOT NULL,
    STATUS VARCHAR(20) NOT NULL,
    CREATED_AT TIMESTAMP NOT NULL,
    UPDATED_AT TIMESTAMP NOT NULL,
    CONSTRAINT PK_PNT_EARN_MST PRIMARY KEY (PTXNO)
);

COMMENT ON TABLE POINT.PNT_EARN_MST IS '포인트 적립 원장';
COMMENT ON COLUMN POINT.PNT_EARN_MST.PTXNO IS '적립 거래번호, PK';
COMMENT ON COLUMN POINT.PNT_EARN_MST.MEMBER_ID IS '회원아이디';
COMMENT ON COLUMN POINT.PNT_EARN_MST.EARN_TYPE IS '적립 유형';
COMMENT ON COLUMN POINT.PNT_EARN_MST.EARN_AMT IS '최초 적립 금액';
COMMENT ON COLUMN POINT.PNT_EARN_MST.RMN_AMT IS '현재 사용 가능 잔액';
COMMENT ON COLUMN POINT.PNT_EARN_MST.USE_AMT IS '누적 사용 금액';
COMMENT ON COLUMN POINT.PNT_EARN_MST.EARN_CNCL_AMT IS '적립취소 금액';
COMMENT ON COLUMN POINT.PNT_EARN_MST.EXPIRED_AMT IS '만료 금액';
COMMENT ON COLUMN POINT.PNT_EARN_MST.FIRST_EXP_DT IS '최초 부여 만료일';
COMMENT ON COLUMN POINT.PNT_EARN_MST.EXP_DT IS '현재 유효 만료일';
COMMENT ON COLUMN POINT.PNT_EARN_MST.STATUS IS '현재 상태';
COMMENT ON COLUMN POINT.PNT_EARN_MST.CREATED_AT IS '생성일시';
COMMENT ON COLUMN POINT.PNT_EARN_MST.UPDATED_AT IS '수정일시';

CREATE INDEX IF NOT EXISTS POINT.IDX_PNT_EARN_MST_01 ON POINT.PNT_EARN_MST (MEMBER_ID, STATUS, EARN_TYPE, EXP_DT, CREATED_AT, PTXNO);
CREATE INDEX IF NOT EXISTS POINT.IDX_PNT_EARN_MST_02 ON POINT.PNT_EARN_MST (MEMBER_ID, EXP_DT);

-- 포인트 사용원장 테이블
CREATE TABLE IF NOT EXISTS POINT.PNT_USE_MST (
    PTXNO VARCHAR(26) NOT NULL,
    MEMBER_ID VARCHAR(32) NOT NULL,
    ORDER_NO VARCHAR(100) NOT NULL,
    USE_AMT BIGINT NOT NULL,
    CNCL_AMT BIGINT NOT NULL,
    RMN_AMT BIGINT NOT NULL,
    STATUS VARCHAR(20) NOT NULL,
    CREATED_AT TIMESTAMP NOT NULL,
    UPDATED_AT TIMESTAMP NOT NULL,
    CONSTRAINT PK_PNT_USE_MST PRIMARY KEY (PTXNO)
);

COMMENT ON TABLE POINT.PNT_USE_MST IS '포인트 사용원장';
COMMENT ON COLUMN POINT.PNT_USE_MST.PTXNO IS '사용 거래번호, PK';
COMMENT ON COLUMN POINT.PNT_USE_MST.MEMBER_ID IS '회원아이디';
COMMENT ON COLUMN POINT.PNT_USE_MST.ORDER_NO IS '클라이언트 주문번호';
COMMENT ON COLUMN POINT.PNT_USE_MST.USE_AMT IS '최초 사용 금액';
COMMENT ON COLUMN POINT.PNT_USE_MST.CNCL_AMT IS '누적 사용취소 금액';
COMMENT ON COLUMN POINT.PNT_USE_MST.RMN_AMT IS '남은 취소 가능 금액';
COMMENT ON COLUMN POINT.PNT_USE_MST.STATUS IS '사용 거래 상태';
COMMENT ON COLUMN POINT.PNT_USE_MST.CREATED_AT IS '생성일시';
COMMENT ON COLUMN POINT.PNT_USE_MST.UPDATED_AT IS '수정일시';

CREATE INDEX IF NOT EXISTS POINT.IDX_PNT_USE_MST_01 ON POINT.PNT_USE_MST (MEMBER_ID, ORDER_NO);
CREATE INDEX IF NOT EXISTS POINT.IDX_PNT_USE_MST_02 ON POINT.PNT_USE_MST (MEMBER_ID, CREATED_AT);

-- 포인트 사용 상세 테이블
CREATE TABLE IF NOT EXISTS POINT.PNT_USE_ALLOC (
    USE_ALLOC_ID VARCHAR(26) NOT NULL,
    PTXNO VARCHAR(26) NOT NULL,
    EARN_PTXNO VARCHAR(26) NOT NULL,
    MEMBER_ID VARCHAR(32) NOT NULL,
    PRIORITY INTEGER NOT NULL,
    CNSM_AMT BIGINT NOT NULL,
    CNCL_AMT BIGINT NOT NULL,
    RMN_AMT BIGINT NOT NULL,
    EXP_DT DATE NOT NULL,
    CREATED_AT TIMESTAMP NOT NULL,
    UPDATED_AT TIMESTAMP NOT NULL,
    CONSTRAINT PK_PNT_USE_ALLOC PRIMARY KEY (USE_ALLOC_ID),
    CONSTRAINT UK_PNT_USE_ALLOC_01 UNIQUE (PTXNO, PRIORITY),
    CONSTRAINT FK_PNT_USE_ALLOC_01 FOREIGN KEY (PTXNO) REFERENCES POINT.PNT_USE_MST (PTXNO),
    CONSTRAINT FK_PNT_USE_ALLOC_02 FOREIGN KEY (EARN_PTXNO) REFERENCES POINT.PNT_EARN_MST (PTXNO)
);

COMMENT ON TABLE POINT.PNT_USE_ALLOC IS '포인트 사용 Allocation 상세';
COMMENT ON COLUMN POINT.PNT_USE_ALLOC.USE_ALLOC_ID IS '사용 상세번호, PK';
COMMENT ON COLUMN POINT.PNT_USE_ALLOC.PTXNO IS '사용 거래번호';
COMMENT ON COLUMN POINT.PNT_USE_ALLOC.EARN_PTXNO IS '사용된 적립 거래번호';
COMMENT ON COLUMN POINT.PNT_USE_ALLOC.MEMBER_ID IS '회원아이디';
COMMENT ON COLUMN POINT.PNT_USE_ALLOC.PRIORITY IS '사용 차감 순서';
COMMENT ON COLUMN POINT.PNT_USE_ALLOC.CNSM_AMT IS '해당 적립 건에서 사용한 금액';
COMMENT ON COLUMN POINT.PNT_USE_ALLOC.CNCL_AMT IS '해당 사용분 중 취소된 금액';
COMMENT ON COLUMN POINT.PNT_USE_ALLOC.RMN_AMT IS '남은 취소 가능 금액';
COMMENT ON COLUMN POINT.PNT_USE_ALLOC.EXP_DT IS '사용 당시 적립 건 만료일';
COMMENT ON COLUMN POINT.PNT_USE_ALLOC.CREATED_AT IS '생성일시';
COMMENT ON COLUMN POINT.PNT_USE_ALLOC.UPDATED_AT IS '수정일시';

CREATE INDEX IF NOT EXISTS POINT.IDX_PNT_USE_ALLOC_01 ON POINT.PNT_USE_ALLOC (PTXNO, PRIORITY);
CREATE INDEX IF NOT EXISTS POINT.IDX_PNT_USE_ALLOC_02 ON POINT.PNT_USE_ALLOC (EARN_PTXNO);
CREATE INDEX IF NOT EXISTS POINT.IDX_PNT_USE_ALLOC_03 ON POINT.PNT_USE_ALLOC (MEMBER_ID, CREATED_AT);

-- 포인트 사용취소 이력 테이블
CREATE TABLE IF NOT EXISTS POINT.PNT_USE_CANCEL_HIST (
    USE_CNCL_HIST_ID VARCHAR(26) NOT NULL,
    USE_CNCL_PTXNO VARCHAR(26) NOT NULL,
    USE_PTXNO VARCHAR(26) NOT NULL,
    USE_ALLOC_ID VARCHAR(26) NOT NULL,
    MEMBER_ID VARCHAR(32) NOT NULL,
    CNCL_SEQ INTEGER NOT NULL,
    ORG_EARN_PTXNO VARCHAR(26) NOT NULL,
    RESTORE_PTXNO VARCHAR(26),
    RESTORE_TYPE VARCHAR(30) NOT NULL,
    CNCL_AMT BIGINT NOT NULL,
    CREATED_AT TIMESTAMP NOT NULL,
    CONSTRAINT PK_PNT_USE_CANCEL_HIST PRIMARY KEY (USE_CNCL_HIST_ID),
    CONSTRAINT FK_PNT_USE_CANCEL_HIST_01 FOREIGN KEY (USE_PTXNO) REFERENCES POINT.PNT_USE_MST (PTXNO),
    CONSTRAINT FK_PNT_USE_CANCEL_HIST_02 FOREIGN KEY (USE_ALLOC_ID) REFERENCES POINT.PNT_USE_ALLOC (USE_ALLOC_ID),
    CONSTRAINT FK_PNT_USE_CANCEL_HIST_03 FOREIGN KEY (RESTORE_PTXNO) REFERENCES POINT.PNT_EARN_MST (PTXNO)
);

COMMENT ON TABLE POINT.PNT_USE_CANCEL_HIST IS '포인트 사용취소 상세 이력';
COMMENT ON COLUMN POINT.PNT_USE_CANCEL_HIST.USE_CNCL_HIST_ID IS '사용취소 상세 이력번호, PK';
COMMENT ON COLUMN POINT.PNT_USE_CANCEL_HIST.USE_CNCL_PTXNO IS '사용취소 거래번호';
COMMENT ON COLUMN POINT.PNT_USE_CANCEL_HIST.USE_PTXNO IS '원 사용 거래번호';
COMMENT ON COLUMN POINT.PNT_USE_CANCEL_HIST.USE_ALLOC_ID IS '원 사용 Allocation 번호';
COMMENT ON COLUMN POINT.PNT_USE_CANCEL_HIST.MEMBER_ID IS '회원아이디';
COMMENT ON COLUMN POINT.PNT_USE_CANCEL_HIST.CNCL_SEQ IS '원 사용건 내 취소 순번';
COMMENT ON COLUMN POINT.PNT_USE_CANCEL_HIST.ORG_EARN_PTXNO IS '원 적립 거래번호';
COMMENT ON COLUMN POINT.PNT_USE_CANCEL_HIST.RESTORE_PTXNO IS '신규 RESTORE 적립 거래번호 nullable';
COMMENT ON COLUMN POINT.PNT_USE_CANCEL_HIST.RESTORE_TYPE IS '복원 유형';
COMMENT ON COLUMN POINT.PNT_USE_CANCEL_HIST.CNCL_AMT IS '취소 금액';
COMMENT ON COLUMN POINT.PNT_USE_CANCEL_HIST.CREATED_AT IS '생성일시';

CREATE INDEX IF NOT EXISTS POINT.IDX_PNT_USE_CANCEL_HIST_01 ON POINT.PNT_USE_CANCEL_HIST (USE_PTXNO, CNCL_SEQ);
CREATE INDEX IF NOT EXISTS POINT.IDX_PNT_USE_CANCEL_HIST_02 ON POINT.PNT_USE_CANCEL_HIST (USE_CNCL_PTXNO);
CREATE INDEX IF NOT EXISTS POINT.IDX_PNT_USE_CANCEL_HIST_03 ON POINT.PNT_USE_CANCEL_HIST (ORG_EARN_PTXNO);
CREATE INDEX IF NOT EXISTS POINT.IDX_PNT_USE_CANCEL_HIST_04 ON POINT.PNT_USE_CANCEL_HIST (RESTORE_PTXNO);
